Добавляет базовые стили для шапки

--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -1,1 +1,8 @@
 /* здесь используйте глобальные переменные */
+$basic-white: #FFFFFF;
+$basic-black: #000000;
+$basic-green: #68B738;
+$basic-grey: #F2F2F2;
+
+$special-grey: #CDCDCD;
+$special-dark-grey: #444444;
