--- a/source/styles/components/button.scss
+++ b/source/styles/components/button.scss
@@ -1,9 +1,8 @@
-@import "../global/variables.scss";
-
 .button {
   color: $basic-white;
 
   font-family: inherit;
+  font-size: 16px;
   line-height: 20px;
   text-align: center;
   text-decoration: none;
