--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -6,3 +6,7 @@ $basic-grey: #F2F2F2;
 
 $special-grey: #CDCDCD;
 $special-dark-grey: #444444;
+
+$mobile: 320px;
+$tablet: 768px;
+$desktop: 1440px;
