--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,14 +1,19 @@
 /* GLOBAL */
 @import "./global/variables.scss";
 @import "./global/mixins.scss";
-@import "./global/global.scss";
 @import "./global/fonts.scss";
+@import "./global/global.scss";
 @import "./global/visually-hidden.scss";
+
+/* COMPONENTS */
+@import "./components/button.scss";
+@import "./components/section-title.scss";
+@import "./components/regular-text.scss";
+
 
 /* BLOCKS */
 
 @import "./blocks/page.scss";
-@import "./blocks/button.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/site-list.scss";
