--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -1,10 +1,10 @@
 /* здесь используйте глобальные переменные */
-$basic-white: #FFFFFF;
+$basic-white: #ffffff;
 $basic-black: #000000;
-$basic-green: #68B738;
-$basic-grey: #F2F2F2;
+$basic-green: #68b738;
+$basic-grey: #f2f2f2;
 
-$special-grey: #CDCDCD;
+$special-grey: #cdcdcd;
 $special-dark-grey: #444444;
 
 $mobile: 320px;
