--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -1,6 +1,6 @@
 .programs__title {
   font-size: 24px;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 37px;
   text-transform: uppercase;
 }
