--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,5 +1,20 @@
-.header {
-  background-color: #663399;
-  color: #ffffff;
-  padding: 10px 15px;
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  position: relative;
+
+  padding: 17px 0 20px;
+
+  background-image: url("../../images/logo-text.svg");
+  background-repeat: no-repeat;
+  background-size: 101px auto;
+  background-position: top 23px center;
+}
+
+.main-header__logo-image {
+  position: absolute;
+  left: 0;
+  top: 13px;
 }
