--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -14,6 +14,7 @@
 /* BLOCKS */
 
 @import "./blocks/page.scss";
+@import "./blocks/container.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/site-list.scss";
