--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -3,6 +3,11 @@
   background-repeat: no-repeat;
   background-color: transparent;
 
+  position: absolute;
+
+  top: 20px;
+  right: 1px;
+
   border: none;
 
   width: 24px;
@@ -18,4 +23,8 @@
 .main-nav__list {
   display: none;
   position: absolute;
+
+  z-index: 5;
+
+  background-color: $basic-white;
 }
