--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -26,5 +26,6 @@
 @import "./blocks/compare-slider.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/address.scss";
+@import "./blocks/map.scss";
 @import "./blocks/socials.scss";
 @import "./blocks/html-academy.scss";
