--- a/source/styles/blocks/case.scss
+++ b/source/styles/blocks/case.scss
@@ -43,7 +43,7 @@
   line-height: 12px;
   text-align: center;
 
-  background-color: $basic-grey;
+  background-color: #eaeaea;
 
   position: absolute;
   bottom: -15px;
