--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -12,9 +12,10 @@
 
 
 /* BLOCKS */
-
 @import "./blocks/page.scss";
 @import "./blocks/container.scss";
+@import "./blocks/logo-text.scss";
+@import "./blocks/socials.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/site-list.scss";
@@ -27,5 +28,4 @@
 @import "./blocks/main-footer.scss";
 @import "./blocks/address.scss";
 @import "./blocks/map.scss";
-@import "./blocks/socials.scss";
 @import "./blocks/html-academy.scss";
