--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -9,6 +9,19 @@
   background-repeat: no-repeat;
   background-size: 101px auto;
   background-position: top 23px center;
+
+  &::after {
+    content: "";
+    position: absolute;
+
+    width: calc(100% + 44px);
+    height: 1px;
+
+    bottom: -2px;
+    left: -21px;
+
+    background-color: #d9d9d9;
+  }
 }
 
 .main-header__logo {
