--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -7,6 +7,8 @@ $basic-grey: #f2f2f2;
 $special-grey: #cdcdcd;
 $special-dark-grey: #444444;
 
+$status-error: #ff8282;
+
 $mobile: 320px;
 $tablet: 768px;
 $desktop: 1440px;
