--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -7,6 +7,7 @@
 
 /* COMPONENTS */
 @import "./components/button.scss";
+@import "./components/input.scss";
 @import "./components/section-title.scss";
 @import "./components/regular-text.scss";
 
@@ -25,6 +26,8 @@
 @import "./blocks/instruction.scss";
 @import "./blocks/case.scss";
 @import "./blocks/compare-slider.scss";
+@import "./blocks/main-form.scss";
+@import "./blocks/program-form.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/address.scss";
 @import "./blocks/map.scss";
