Добавляет стилизацию страницы с формой

--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -1,8 +1,12 @@
 .main-footer__contacts {
-  padding: 26px 0;
+  padding: 26px 20px;
 
   display: flex;
   justify-content: space-between;
+
+  &--grey {
+    background-color: $basic-grey;
+  }
 }
 
 .main-footer__text {
