--- a/source/styles/components/input-text.scss
+++ b/source/styles/components/input-text.scss
@@ -1,5 +1,18 @@
-.input {
-  padding: 14px 15px 13px;
+.input-text {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+
+.input-text__label {
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.input-text__input {
+  padding: 13px 12px 12px 14px;
 
   font-family: inherit;
   font-size: 16px;
@@ -9,6 +22,8 @@
   color: $special-dark-grey;
 
   border: 1px solid #e7e7e7;
+
+  flex-grow: 1;
 
   &:focus-visible {
     outline: none;
