--- a/source/styles/blocks/case.scss
+++ b/source/styles/blocks/case.scss
@@ -1,7 +1,7 @@
 .case {
   background-color: #eaeaea;
 
-  padding: 25px 20px 38px;
+  padding: 25px 20px 40px;
 }
 
 .case__title {
@@ -73,6 +73,5 @@
 
 .case__slider {
   width: 280px;
-  height: 256px;
-  border: 1px solid black;
+  margin: 0 auto 0;
 }
