--- a/source/styles/blocks/form/check-group.scss
+++ b/source/styles/blocks/form/check-group.scss
@@ -1,10 +1,8 @@
 .check-group {
-  padding: 0 0 28px;
+  padding: 9px 0 28px;
 }
 
 .check-group .main-form__legend {
-  padding-top: 9px;
-
   margin-bottom: 29px;
 }
 
