--- a/source/styles/blocks/form/contacts-group.scss
+++ b/source/styles/blocks/form/contacts-group.scss
@@ -1,13 +1,9 @@
 .contacts-group {
-  padding: 0 0 12px;
+  padding: 27px 0 12px;
 }
 
 .contacts-group .main-form__legend {
-  padding-top: 27px;
-
   margin-bottom: 35px;
-
-  max-width: 190px;
 }
 
 .contacts-group__item:not(:last-child) {
