--- a/source/styles/blocks/form/textarea-group.scss
+++ b/source/styles/blocks/form/textarea-group.scss
@@ -1,9 +1,7 @@
 .textarea-group {
-  padding: 0 0 12px;
+  padding: 13px 0 12px;
 }
 
 .textarea-group .main-form__legend {
-  padding-top: 13px;
-
   margin-bottom: 37px;
 }
