--- a/source/styles/components/crossed-title.scss
+++ b/source/styles/components/crossed-title.scss
@@ -9,29 +9,28 @@
     content: "";
     position: absolute;
 
-    top: 0;
+    width: calc(100% + 20px);
+    height: 2px;
+
+    background-color: $basic-green;
+
+    top: 15px;
     left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    background-color: $basic-grey;
 
     z-index: -1;
   }
+}
 
-  &::after {
-    content: "";
-    position: absolute;
+.crossed-title__text {
+  position: relative;
+  display: inline-block;
 
-    width: calc(100% + 44px);
-    height: 2px;
+  background-color: $basic-white;
 
-    top: 15px;
-    right: -22px;
+  padding-right: 20px;
+}
 
-    z-index: -2;
-
-    background-color: $basic-green;
-  }
+.crossed-title__wrapper {
+  max-width: 187px;
+  display: block;
 }
