Исправляет соцсети и кнопку слайдера

--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -12,6 +12,8 @@
 
   width: 100%;
   height: 100%;
+
+  z-index: 0;
 }
 
 .compare-slider__screen {
@@ -54,22 +56,24 @@
 }
 
 .compare-slider__toggle {
-  width: 40px;
-  height: 100%;
+  position: absolute;
 
-  background-image: url("../../images/icons/stack.svg#slider-button");
-  background-color: transparent;
+  padding: 0;
+
+  height: 100%;
+  width: 4px;
+
+  top: 0;
+  left: 50%;
+
+  transform: translateX(-50%);
+  transition: left 1s;
 
   border: none;
 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-color: #666666;
 
   z-index: 7;
-
-  transition: left 1s;
 
   cursor: pointer;
 
@@ -77,17 +81,59 @@
     content: "";
     position: absolute;
 
-    height: 100%;
-    width: 4px;
+    width: 40px;
+    height: 40px;
 
-    top: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: $basic-white;
+    border: 2px solid #666666;
+    border-radius: 50%;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+
+    width: 24px;
+    height: 18px;
+
+    top: 50%;
     left: 50%;
 
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
 
-    z-index: 3;
-
+    mask-image: url("../../images/icons/stack.svg#slider-button");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 24px 18px;
     background-color: #666666;
+  }
+
+  &:hover {
+    background-color: $basic-green;
+
+    &::before {
+      border-color: $basic-green;
+    }
+
+    &::after {
+      background-color: $basic-green;
+    }
+  }
+
+  &:active {
+    background-color: rgba(94, 170, 47, 0.6);
+
+    &::before {
+      border-color: rgba(94, 170, 47, 0.6);
+    }
+
+    &::after {
+      background-color: rgba(94, 170, 47, 0.6);
+    }
   }
 }
 
