--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -24,7 +24,14 @@
   display: none;
   position: absolute;
 
+  left: -20px;
+  top: 100%;
+
   z-index: 5;
 
   background-color: $basic-white;
+
+  &--opened {
+    display: block;
+  }
 }
