--- a/source/styles/blocks/site-list.scss
+++ b/source/styles/blocks/site-list.scss
@@ -4,9 +4,20 @@
   font-size: 20px;
   line-height: 100%;
   text-transform: uppercase;
+  text-align: center;
+
+  padding-top: 2px;
+
+  width: calc(100% + 40px);
 }
 
 .site-list__link {
   color: $basic-black;
+
   text-decoration: none;
+
+  display: block;
+  padding: 22px 20px 23px;
+
+  border-bottom: 1px solid #d9d9d9;
 }
