Добавляет изображения в каталог

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -44,3 +44,7 @@
 @import "./blocks/form/contacts-group.scss";
 @import "./blocks/form/textarea-group.scss";
 @import "./blocks/form/check-group.scss";
+
+/* CATALOG */
+@import "./blocks/catalog/main-catalog.scss";
+@import "./blocks/catalog/catalog.scss";
