Добавляет стилизацию карточек каталога

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -48,3 +48,5 @@
 /* CATALOG */
 @import "./blocks/catalog/main-catalog.scss";
 @import "./blocks/catalog/catalog.scss";
+@import "./blocks/catalog/properties.scss";
+@import "./blocks/catalog/more.scss";
