Добавляет стилизацию всего каталога

--- a/source/styles/blocks/catalog/catalog.scss
+++ b/source/styles/blocks/catalog/catalog.scss
@@ -4,7 +4,7 @@
   border-top: 1px solid #ebebeb;
   border-bottom: 1px solid #ebebeb;
 
-  margin: 0 auto;
+  margin: 0 auto 25px;
 }
 
 .catalog__item {
