--- a/source/styles/components/crossed-title.scss
+++ b/source/styles/components/crossed-title.scss
@@ -1,6 +1,8 @@
 .crossed-title {
   position: relative;
 
+  margin: 0;
+
   background-color: $basic-white;
 
   z-index: 5;
@@ -29,6 +31,10 @@
 .crossed-title__text {
   position: relative;
   display: inline-block;
+
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 26px;
 
   background-color: $basic-white;
 
