--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -50,3 +50,5 @@
 @import "./blocks/catalog/catalog.scss";
 @import "./blocks/catalog/properties.scss";
 @import "./blocks/catalog/more.scss";
+@import "./blocks/catalog/extra.scss";
+@import "./blocks/catalog/gift.scss";
