--- a/source/styles/blocks/catalog/catalog.scss
+++ b/source/styles/blocks/catalog/catalog.scss
@@ -8,16 +8,28 @@
 }
 
 .catalog__item {
-  padding: 20px 20px 24px;
+  padding: 20px 20px 25px;
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 
-  border-bottom: 1px solid #ebebeb;
+  position: relative;
 
-  box-sizing: border-box;
+  &::after {
+    content: "";
+    position: absolute;
 
-  max-height: 209px;
+    height: 1px;
+    width: 100%;
+
+    background-color: #ebebeb;
+
+    bottom: 0;
+  }
+}
+
+.catalog__image {
+  display: block;
 }
 
 .catalog__title {
@@ -36,5 +48,5 @@
 .catalog__button {
   grid-column: span 2;
 
-  margin-top: 15px;
+  margin-top: 17px;
 }
