--- a/source/styles/blocks/catalog/gift.scss
+++ b/source/styles/blocks/catalog/gift.scss
@@ -2,7 +2,7 @@
   min-height: 290px;
 
   background-color: rgba(104, 183, 56, 0.85);
-  background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-mobile@2x.jpg");
+  background-image: url("../../images/icons/stack.svg#icon-gift"), url("../../images/gift-mobile@2x.jpg");
   background-repeat: no-repeat, no-repeat;
   background-size: 78px 80px, contain;
   background-position: top 59px center, center;
