--- a/source/styles/blocks/catalog/more.scss
+++ b/source/styles/blocks/catalog/more.scss
@@ -1,7 +1,7 @@
 .more {
   padding: 78px 20px 24px;
 
-  background-image: url("../../../images/icons/stack.svg#plus");
+  background-image: url("../../images/icons/stack.svg#plus");
   background-size: 30px;
   background-position: top -63px center;
   background-repeat: no-repeat;
