--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -1,9 +1,26 @@
+.map {
+  position: relative;
+}
+
 .map__image {
-  display: none;
+  display: block;
+
+  width: 100%;
+  height: 362px;
 }
 
 .map__google {
+  position: absolute;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
   max-height: 362px;
+
+  z-index: 5;
 }
 
 .map__google-link {
