--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -4,6 +4,29 @@
   text-align: center;
 
   position: relative;
+
+  @media (min-width: $tablet) {
+    min-height: 874px;
+
+    text-align: left;
+
+    &::after {
+      content: "";
+      position: absolute;
+
+      background-image: url("../../images/index-can-tablet@2x.png");
+      background-repeat: no-repeat;
+      background-size: 100%;
+
+      left: 50%;
+      bottom: 0;
+
+      transform: translateX(-50%);
+
+      width: 709px;
+      height: 609px;
+    }
+  }
 }
 
 .hero__container {
@@ -36,6 +59,21 @@
     width: 280px;
     height: 270px;
   }
+
+  @media (min-width: $tablet) {
+    padding: 64px 120px 0;
+    margin: 0 0 50px 0;
+
+    background: none;
+
+    min-height: unset;
+
+    z-index: 3;
+
+    &::after {
+      display: none;
+    }
+  }
 }
 
 .hero__title {
@@ -46,6 +84,16 @@
   margin: 0 auto 25px;
 
   max-width: 250px;
+
+  @media (min-width: $tablet) {
+    color: $basic-black;
+
+    line-height: 60px;
+
+    margin: 0 0 40px 0;
+
+    max-width: 420px;
+  }
 }
 
 .hero__text {
@@ -57,6 +105,17 @@
   margin: 0 auto;
 
   max-width: 250px;
+
+  @media (min-width: $tablet) {
+    color: $basic-black;
+
+    font-size: 20px;
+    line-height: 20px;
+
+    margin: 0;
+
+    max-width: 300px;
+  }
 }
 
 .hero__button {
@@ -64,4 +123,15 @@
 
   padding: 10px 20px;
   margin-bottom: 20px;
+
+  @media (min-width: $tablet) {
+    width: auto;
+    max-width: 244px;
+
+    padding: 14px 28px;
+    margin: 0 0 526px 120px;
+
+    position: relative;
+    z-index: 3;
+  }
 }
