--- a/source/styles/components/button.scss
+++ b/source/styles/components/button.scss
@@ -14,6 +14,11 @@
 
   border: none;
 
+  @media (min-width: $tablet) {
+    font-size: 20px;
+    line-height: 26px;
+  }
+
   &--primary {
     background-color: $basic-green;
   }
