--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  @media (min-width: $tablet) {
+    gap: 30px;
+  }
 }
 
 .programs__item {
@@ -39,6 +43,23 @@
     background-repeat: no-repeat;
   }
 
+  @media (min-width: $tablet) {
+    padding: 77px 316px 57px 52px;
+
+    &::before {
+      width: 200px;
+      height: 200px;
+
+      left: unset;
+      top: 92px;
+      right: 63px;
+    }
+
+    &:last-child {
+      margin-bottom: 45px;
+    }
+  }
+
   &--slim::after {
     background-image: url("../../images/icons/stack.svg#cat-slim");
 
@@ -47,6 +68,15 @@
 
     top: 21px;
     left: 27px;
+
+    @media (min-width: $tablet) {
+      width: 140px;
+      height: 194px;
+
+      left: unset;
+      top: 81px;
+      right: 93px;
+    }
   }
 
   &--pro::after {
@@ -57,6 +87,15 @@
 
     top: 35px;
     left: 13px;
+
+    @media (min-width: $tablet) {
+      width: 268px;
+      height: 112px;
+
+      left: unset;
+      top: 135px;
+      right: 29px;
+    }
   }
 }
 
@@ -67,6 +106,13 @@
   text-transform: uppercase;
 
   margin: 0 0 29px 70px;
+
+  @media (min-width: $tablet) {
+    font-size: 36px;
+    line-height: 36px;
+
+    margin: 0 0 24px 0;
+  }
 }
 
 .programs__description {
@@ -87,6 +133,15 @@
 
     background-color: #d9d9d9;
   }
+
+  @media (min-width: $tablet) {
+    margin: 0 0 52px 0;
+    padding-bottom: unset;
+
+    &::after {
+      display: none;
+    }
+  }
 }
 
 .programs__link {
@@ -105,4 +160,14 @@
   background-repeat: no-repeat;
   background-position: center right -2px;
   background-size: 34px auto;
+
+  @media (min-width: $tablet) {
+    font-size: 20px;
+    line-height: 30px;
+
+    margin-top: unset;
+    padding-right: 56px;
+
+    background-size: 32px auto;
+  }
 }
