--- a/source/styles/global/global.scss
+++ b/source/styles/global/global.scss
@@ -5,6 +5,11 @@ body {
   line-height: 18px;
 
   margin: 0;
+
+  @media (min-width: $tablet) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 ::selection {
