--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -18,10 +18,8 @@
       background-repeat: no-repeat;
       background-size: 100%;
 
-      left: 50%;
+      left: 30px;
       bottom: 0;
-
-      transform: translateX(-50%);
 
       width: 709px;
       height: 609px;
