--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -3,6 +3,11 @@
   height: 256px;
 
   position: relative;
+
+  @media (min-width: $tablet) {
+    width: 560px;
+    height: 512px;
+  }
 }
 
 .compare-slider__list {
@@ -31,6 +36,11 @@
 
   transition: width 1s;
 
+  @media (min-width: $tablet) {
+    background-color: transparent;
+    background-image: linear-gradient($basic-white 150px, #eaeaea 150px, #eaeaea 100%);
+  }
+
   &--before {
     z-index: 5;
 
@@ -53,6 +63,11 @@
 .compare-slider__image {
   width: 280px;
   height: 256px;
+
+  @media (min-width: $tablet) {
+    width: 560px;
+    height: 512px;
+  }
 }
 
 .compare-slider__toggle {
