--- a/source/styles/blocks/instruction.scss
+++ b/source/styles/blocks/instruction.scss
@@ -3,6 +3,7 @@
     padding-bottom: 47px;
 
     position: relative;
+    box-sizing: border-box;
 
     &::after {
       content: "";
@@ -13,9 +14,18 @@
 
       background-color: #e6e6e6;
 
-      bottom: 53px;
+      bottom: 0;
       left: -30px;
     }
+  }
+}
+
+.instruction__wrapper {
+  @media (min-width: $tablet) {
+    max-width: 850px;
+    box-sizing: border-box;
+
+    margin: 0 auto;
   }
 }
 
@@ -37,12 +47,15 @@
     grid-template-columns: repeat(2, 1fr);
 
     gap: 37px 59px;
+
+    margin-bottom: 0;
   }
 }
 
 .instruction__item {
   position: relative;
 
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
 
@@ -50,6 +63,7 @@
   align-items: center;
 
   min-height: 54px;
+  max-width: 400px;
 
   counter-increment: instruction;
 
