--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -7,6 +7,10 @@
 
   width: 100%;
   height: 362px;
+
+  @media (min-width: $tablet) {
+    height: 400px;
+  }
 }
 
 .map__google {
@@ -21,9 +25,17 @@
   max-height: 362px;
 
   z-index: 5;
+
+  @media (min-width: $tablet) {
+    max-height: 400px;
+  }
 }
 
 .map__google-link {
   width: 100%;
   height: 362px;
+
+  @media (min-width: $tablet) {
+    height: 400px;
+  }
 }
