--- a/source/styles/components/checkbox.scss
+++ b/source/styles/components/checkbox.scss
@@ -3,6 +3,10 @@
   align-items: center;
 
   gap: 15px;
+
+  @media (min-width: $tablet) {
+    gap: 20px;
+  }
 }
 
 .checkbox__label {
@@ -14,8 +18,18 @@
   position: relative;
 
   min-height: 30px;
+  max-width: 220px;
 
   cursor: pointer;
+
+  @media (min-width: $tablet) {
+    font-size: 20px;
+    line-height: 30px;
+
+    padding: 0;
+
+    max-width: 215px;
+  }
 }
 
 .checkbox__input {
@@ -43,5 +57,17 @@
     background-repeat: no-repeat;
     background-size: 19px 15px;
     background-position: center;
+  }
+
+  @media (min-width: $tablet) {
+    width: 40px;
+    height: 40px;
+
+    &:checked::after {
+      width: 40px;
+      height: 40px;
+
+      background-size: 23px 18px;
+    }
   }
 }
