--- a/source/styles/blocks/form/radio-group.scss
+++ b/source/styles/blocks/form/radio-group.scss
@@ -1,6 +1,4 @@
 .radio-group {
-  padding: 19px 0 13px;
-
   position: relative;
 
   &::after {
@@ -14,8 +12,29 @@
     bottom: 0;
     left: -20px;
   }
+
+  @media (min-width: $tablet) {
+    &::after {
+      display: none;
+    }
+  }
+}
+
+.radio-group__wrapper {
+  padding: 19px 0 13px;
+
+  @media (min-width: $tablet) {
+    padding: 23px 27px 27px;
+    margin: 0 0 67px;
+
+    border: 1px solid #e7e7e7;
+  }
 }
 
 .radio-group__item:not(:last-child) {
   margin-bottom: 4px;
+
+  @media (min-width: $tablet) {
+    margin-bottom: 13px;
+  }
 }
