--- a/source/styles/blocks/catalog/properties.scss
+++ b/source/styles/blocks/catalog/properties.scss
@@ -10,6 +10,32 @@
   font-size: 12px;
   line-height: 16px;
   font-weight: 400;
+
+  @media (min-width: $tablet) {
+    font-size: 16px;
+    line-height: 20px;
+
+    padding: 0 0 4px;
+
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+
+      height: 1px;
+      width: 100%;
+
+      background-color: $special-grey;
+
+      left: 0;
+      bottom: 0;
+    }
+
+    &:not(:last-child) {
+      margin: 0 0 8px;
+    }
+  }
 }
 
 .properties__value {
