--- a/source/styles/blocks/catalog/gift.scss
+++ b/source/styles/blocks/catalog/gift.scss
@@ -14,6 +14,22 @@
   @media (min-resolution: 2dppx) {
     background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-mobile@2x.jpg");
   }
+
+  @media (min-width: $tablet) {
+    min-height: 200px;
+
+    background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-tablet@1x.jpg");
+    background-size: 80px 82px, contain;
+    background-position: top calc(50% - 3px) left calc(50% - 236px), center;
+
+    display: flex;
+    justify-content: center;
+    padding: 71px 125px 32px 320px;
+  }
+
+  @media (min-width: $tablet) and (min-resolution: 2dppx) {
+    background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-tablet@2x.jpg");
+  }
 }
 
 .gift__text {
@@ -27,4 +43,10 @@
   max-width: 161px;
 
   margin: 0 auto;
+
+  @media (min-width: $tablet) {
+    text-align: left;
+
+    margin: 0 0 0 102px;
+  }
 }
