Исправляет заголовок с линией

--- a/source/styles/blocks/form/main-form.scss
+++ b/source/styles/blocks/form/main-form.scss
@@ -2,7 +2,7 @@
   padding: 27px 0 0;
 
   @media (min-width: $tablet) {
-    padding: 64px 40px 38px;
+    padding: 64px 0 59px;
   }
 }
 
@@ -10,7 +10,7 @@
   margin: 0 0 34px;
 
   @media (min-width: $tablet) {
-    margin: 0 0 55px;
+    margin: 0 40px 55px;
   }
 }
 
@@ -23,7 +23,7 @@
     font-size: 20px;
     line-height: 30px;
 
-    margin: 0 0 65px;
+    margin: 0 40px 65px;
   }
 }
 
@@ -42,6 +42,10 @@
 
 .main-form__list {
   @include list-style;
+
+  @media (min-width: $tablet) {
+    margin: 0 40px 0;
+  }
 }
 
 .main-form__submit-wrapper {
@@ -64,6 +68,8 @@
     padding: 14px 44px;
 
     max-width: 284px;
+
+    margin: 0 0 0 40px;
   }
 }
 
@@ -74,11 +80,13 @@
   text-align: center;
   line-height: 16px;
 
-  margin-bottom: 32px;
+  margin: 0 0 32px 0;
 
   @media (min-width: $tablet) {
     text-align: left;
 
-    padding: 5px 0 0;
+    display: inline-block;
+
+    margin: unset;
   }
 }
