--- a/source/styles/blocks/form/textarea-group.scss
+++ b/source/styles/blocks/form/textarea-group.scss
@@ -6,6 +6,14 @@
   }
 }
 
+.textarea-group__wrapper .textarea {
+  @media (min-width: $tablet) {
+    width: calc(100% - 80px);
+    
+    margin: 0 40px;
+  }
+}
+
 .textarea-group .main-form__legend {
   margin-bottom: 37px;
 
